Changes to the code
Changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="box">
     <img src="https://preview.ibb.co/kFrffn/profile.jpg" class="box-image">
         <h1>Ashit Sathish</h1>
-        <h5>Junior Web Developer</h5>
-        <p> Junior Web Developer able to build a presence from the ground up. Skilled at writing well- designed, testable and efficient code using current best practices, seeking full- time opportunities in the field of Web Development.</p>
+        <h5>Web Developer</h5>
+        <p>Web Developer able to build a presence from the ground up. Skilled at writing well- designed, testable and efficient code using current best practices, seeking full- time opportunities in the field of Web Development.</p>
         <ul>
         <li><a href="https://www.facebook.com/ashitmoily.s"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://www.instagram.com/ash_moily/"><i class="fab fa-instagram"></i></a></li>
