--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
         <li><a href="https://www.facebook.com/ashitmoily.s"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="https://www.instagram.com/ash_moily/"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="https://github.com/ashits8118/Web-Development"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://github.com/ashits8118"><i class="fab fa-github"></i></a></li>
         </ul>
     </div>
 </body>
